PR6954 Do automatic global printing for RMW operands.

* staptree.h (current_lvalue_read):  New.
* staptree.cxx (varuse_collecting_visitor::visit_symbol): Do not
   treat an RMW symbol as read if the value is not a real rvalue.
  (varuse_collecting_visitor::visit_print_format): Handle current_lvalue_read.
  (varuse_collecting_visitor::visit_assignment): Likewise.
  (varuse_collecting_visitor::visit_delete_statement): Likewise.

* global_end.exp (global_end_var): Test RMW cases.
* global_end.stp (global_end_var): Likewise.